# merge-mate

./: Cargo.toml  README.md
src/: main.rs
src/commands/: cleanup.rs  mod.rs  update.rs  wait.rs
