[package]
name = "merge-mate"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "mm"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = "0.4.0"
clap = { version = "4.3.0", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.8.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
spinners = "4.1.0"
